# 3d-game-engine

./: Application.cpp  Application.h  CMakeLists.txt  Common.h  Context.h  Engine.cpp  Engine.h  TypesNames.h  main.cpp
GeometryUtils/: Quaternion_utils.cpp  Quaternion_utils.h  TangentSpace.cpp  TangentSpace.h  Types.h  VBOindexer.cpp  VBOindexer.h
InputControlSystem/: Camera.cpp  Camera.h  InputControlSystem.cpp  InputControlSystem.h  cameracpp  camerah
Lights/: Color.h  Light.cpp  Light.h  Material.h  PointLight.cpp  PointLight.h
Mesh/: Animation.cpp  Animation.h  AssimpLoader.cpp  AssimpLoader.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Modelcpp  Modelh  node.cpp  node.h
PhysicalSystem/: CommonCameraInterface.h  CommonGUIHelperInterface.h  CommonGraphicsAppInterface.h  CommonMultiBodyBase.h  CommonRenderInterface.h  CommonRigidBodyBase.h  CommonWindowInterface.h  DebugDrawer.cpp  DebugDrawer.h  DynamicCharacterController.cpp  DynamicCharacterController.h  GL_ShapeDrawer.cpp  GL_ShapeDrawer.h  OpenGLGuiHelper.cpp  OpenGLGuiHelper.h  PhysicalBody.cpp  PhysicalBody.h  PhysicalSystem.cpp  PhysicalSystem.h  PhysicsComponent.h  PhysicsGhostComponent.h  btutilities.cpp  btutilities.h
RenderSystem/: GLDebugDefs.h  GLDefs.h  GLVAO.cpp  GLVAO.h  RenderBatchh  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  Shadercpp  Shaderh
Scene/: Object.cpp  Object.h  Scene.h
Texture/: Texture.cpp  Texture.h  TextureFactory.cpp  TextureFactory.h
libs/: stb_image.h  stb_image_write.h  tiny_obj_loader.h
shaders/: StandardShading.frag  light_casters.frag
